--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ a:hover{
 }
 
 li {
-    list-style: none;
+    list-style: square;
 }
 
 .container{
@@ -70,6 +70,9 @@ footer{
 }
 
 @media (max-width: 500px) {
+    body{
+        display: inline-block;
+    }
     .grid{
         grid-template-columns: 50fr;
     }
